[gd_scene load_steps=34 format=2]

[ext_resource path="res://Inventory/GUI/Assets/PotionWheel/slot_4_empty.png" type="Texture" id=1]
[ext_resource path="res://Inventory/GUI/Assets/PotionWheel/slot_5_empty.png" type="Texture" id=2]
[ext_resource path="res://Inventory/GUI/Assets/PotionWheel/slot_6_empty.png" type="Texture" id=3]
[ext_resource path="res://Inventory/GUI/Scenes/PotionWheelCenter.tscn" type="PackedScene" id=4]
[ext_resource path="res://Inventory/GUI/Assets/PotionWheel/slot_2_empty.png" type="Texture" id=5]
[ext_resource path="res://Inventory/GUI/Assets/PotionWheel/slot_1_empty.png" type="Texture" id=6]
[ext_resource path="res://Inventory/GUI/Assets/PotionWheel/slot_3_empty.png" type="Texture" id=7]
[ext_resource path="res://Items/Potions/Assets/gravity_potion.png" type="Texture" id=8]
[ext_resource path="res://Items/Potions/Assets/fire_potion.png" type="Texture" id=9]
[ext_resource path="res://Items/Potions/Assets/time_potion.png" type="Texture" id=10]
[ext_resource path="res://Items/Potions/Assets/boxing_potion.png" type="Texture" id=11]
[ext_resource path="res://Items/Potions/Assets/yin_yang_potion.png" type="Texture" id=12]
[ext_resource path="res://Items/Potions/Assets/space_potion.png" type="Texture" id=13]
[ext_resource path="res://Inventory/GUI/Assets/PotionWheel/slot_1_empty_hover.png" type="Texture" id=14]
[ext_resource path="res://Inventory/GUI/Assets/PotionWheel/slot_4_empty_hover.png" type="Texture" id=15]
[ext_resource path="res://Inventory/GUI/Assets/PotionWheel/slot_2_empty_hover.png" type="Texture" id=16]
[ext_resource path="res://Inventory/GUI/Assets/PotionWheel/slot_6_empty_hover.png" type="Texture" id=17]
[ext_resource path="res://Inventory/GUI/Assets/PotionWheel/slot_3_empty_hover.png" type="Texture" id=18]
[ext_resource path="res://Inventory/GUI/Assets/PotionWheel/slot_5_empty_hover.png" type="Texture" id=19]
[ext_resource path="res://Inventory/GUI/Scripts/PotionWheel.gd" type="Script" id=20]
[ext_resource path="res://Inventory/GUI/Scenes/PotionWheelBubble.tscn" type="PackedScene" id=21]
[ext_resource path="res://Inventory/GUI/Assets/PotionWheel/slot_1_bitmap.png" type="BitMap" id=22]
[ext_resource path="res://Inventory/GUI/Assets/PotionWheel/slot_2_bitmap.png" type="BitMap" id=23]
[ext_resource path="res://Inventory/GUI/Assets/PotionWheel/slot_5_bitmap.png" type="BitMap" id=24]
[ext_resource path="res://Inventory/GUI/Assets/PotionWheel/slot_3_bitmap.png" type="BitMap" id=25]
[ext_resource path="res://Inventory/GUI/Assets/PotionWheel/slot_4_bitmap.png" type="BitMap" id=26]
[ext_resource path="res://Inventory/GUI/Assets/PotionWheel/slot_6_bitmap.png" type="BitMap" id=27]
[ext_resource path="res://Inventory/GUI/Scripts/SpacePotionSlot.gd" type="Script" id=28]
[ext_resource path="res://Inventory/GUI/Scripts/YinYangPotionSlot.gd" type="Script" id=29]
[ext_resource path="res://Inventory/GUI/Scripts/GravityPotionSlot.gd" type="Script" id=30]
[ext_resource path="res://Inventory/GUI/Scripts/TimePotionSlot.gd" type="Script" id=31]
[ext_resource path="res://Inventory/GUI/Scripts/BoxingPotionSlot.gd" type="Script" id=32]
[ext_resource path="res://Inventory/GUI/Scripts/FirePotionSlot.gd" type="Script" id=33]

[node name="PotionWheel" type="Control" groups=["gui_inventories"]]
modulate = Color( 1, 1, 1, 0.882353 )
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 64, 64 )
script = ExtResource( 20 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="PotionWheelCenter" parent="." instance=ExtResource( 4 )]
margin_left = 32.0
margin_top = 32.0
margin_right = 96.0
margin_bottom = 96.0
rect_scale = Vector2( 0.8, 0.8 )

[node name="SpacePotionSlot" type="TextureButton" parent="." groups=["potionwheel_slot"]]
margin_left = -16.0
margin_right = 48.0
margin_bottom = 64.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 14 )
texture_click_mask = ExtResource( 22 )
script = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="TextureRect" parent="SpacePotionSlot"]
margin_left = 28.0
margin_top = 32.0
margin_right = 92.0
margin_bottom = 96.0
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bubble" parent="SpacePotionSlot" instance=ExtResource( 21 )]
margin_left = 38.0
margin_top = 43.0
margin_right = 38.0
margin_bottom = 43.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="TimePotionSlot" type="TextureButton" parent="." groups=["potionwheel_slot"]]
margin_left = 32.0
margin_top = -16.0
margin_right = 96.0
margin_bottom = 48.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 16 )
texture_click_mask = ExtResource( 23 )
script = ExtResource( 31 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="TextureRect" parent="TimePotionSlot"]
margin_left = 26.0
margin_top = 24.0
margin_right = 90.0
margin_bottom = 88.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bubble" parent="TimePotionSlot" instance=ExtResource( 21 )]
margin_left = 34.0
margin_top = 34.0
margin_right = 34.0
margin_bottom = 34.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="FirePotionSlot" type="TextureButton" parent="." groups=["potionwheel_slot"]]
margin_left = 64.0
margin_right = 128.0
margin_bottom = 64.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 18 )
texture_click_mask = ExtResource( 25 )
script = ExtResource( 33 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="TextureRect" parent="FirePotionSlot"]
margin_left = 32.0
margin_top = 32.0
margin_right = 96.0
margin_bottom = 96.0
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bubble" parent="FirePotionSlot" instance=ExtResource( 21 )]
margin_left = 42.0
margin_top = 43.0
margin_right = 42.0
margin_bottom = 43.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="BoxingPotionSlot" type="TextureButton" parent="." groups=["potionwheel_slot"]]
margin_left = 64.0
margin_top = 64.0
margin_right = 128.0
margin_bottom = 128.0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 15 )
texture_click_mask = ExtResource( 26 )
script = ExtResource( 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="TextureRect" parent="BoxingPotionSlot"]
margin_left = 32.0
margin_top = 15.5
margin_right = 96.0
margin_bottom = 79.5
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bubble" parent="BoxingPotionSlot" instance=ExtResource( 21 )]
margin_left = 42.25
margin_top = 27.5
margin_right = 42.25
margin_bottom = 27.5
rect_scale = Vector2( 0.5, 0.5 )

[node name="GravityPotionSlot" type="TextureButton" parent="." groups=["potionwheel_slot"]]
margin_left = 32.0
margin_top = 80.0
margin_right = 96.0
margin_bottom = 144.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 19 )
texture_click_mask = ExtResource( 24 )
script = ExtResource( 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="TextureRect" parent="GravityPotionSlot"]
margin_left = 24.0
margin_top = 22.0
margin_right = 88.0
margin_bottom = 86.0
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bubble" parent="GravityPotionSlot" instance=ExtResource( 21 )]
margin_left = 34.0
margin_top = 33.25
margin_right = 34.0
margin_bottom = 33.25
rect_scale = Vector2( 0.5, 0.5 )

[node name="YinYangPotionSlot" type="TextureButton" parent="." groups=["potionwheel_slot"]]
margin_top = 64.0
margin_right = 64.0
margin_bottom = 128.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 17 )
texture_click_mask = ExtResource( 27 )
script = ExtResource( 29 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="TextureRect" parent="YinYangPotionSlot"]
margin_left = 12.0
margin_top = 14.0
margin_right = 76.0
margin_bottom = 78.0
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bubble" parent="YinYangPotionSlot" instance=ExtResource( 21 )]
margin_left = 22.0
margin_top = 25.25
margin_right = 22.0
margin_bottom = 25.25
rect_scale = Vector2( 0.5, 0.5 )

[connection signal="mouse_entered" from="SpacePotionSlot" to="." method="_on_mouse_entered" binds= [ "SpacePotion" ]]
[connection signal="mouse_exited" from="SpacePotionSlot" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="SpacePotionSlot" to="." method="_on_slot_clicked" binds= [ "SpacePotion" ]]
[connection signal="mouse_entered" from="TimePotionSlot" to="." method="_on_mouse_entered" binds= [ "TimePotion" ]]
[connection signal="mouse_exited" from="TimePotionSlot" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="TimePotionSlot" to="." method="_on_slot_clicked" binds= [ "TimePotion" ]]
[connection signal="mouse_entered" from="FirePotionSlot" to="." method="_on_mouse_entered" binds= [ "FirePotion" ]]
[connection signal="mouse_exited" from="FirePotionSlot" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="FirePotionSlot" to="." method="_on_slot_clicked" binds= [ "FirePotion" ]]
[connection signal="mouse_entered" from="BoxingPotionSlot" to="." method="_on_mouse_entered" binds= [ "BoxingPotion" ]]
[connection signal="mouse_exited" from="BoxingPotionSlot" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="BoxingPotionSlot" to="." method="_on_slot_clicked" binds= [ "BoxingPotion" ]]
[connection signal="mouse_entered" from="GravityPotionSlot" to="." method="_on_mouse_entered" binds= [ "GravityPotion" ]]
[connection signal="mouse_exited" from="GravityPotionSlot" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="GravityPotionSlot" to="." method="_on_slot_clicked" binds= [ "GravityPotion" ]]
[connection signal="mouse_entered" from="YinYangPotionSlot" to="." method="_on_mouse_entered" binds= [ "YinYangPotion" ]]
[connection signal="mouse_exited" from="YinYangPotionSlot" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="YinYangPotionSlot" to="." method="_on_slot_clicked" binds= [ "YinYangPotion" ]]
